--- a/shi.ui
+++ b/shi.ui
@@ -2,40 +2,11 @@
 <!-- Generated with glade 3.22.1 -->
 <interface>
   <requires lib="gtk+" version="3.20"/>
-  <object class="GtkWindow" id="Splash">
-    <property name="visible">True</property>
-    <property name="sensitive">False</property>
-    <property name="can_focus">False</property>
-    <property name="is_focus">True</property>
-    <property name="resizable">False</property>
-    <property name="window_position">center</property>
-    <property name="default_width">200</property>
-    <property name="default_height">200</property>
-    <property name="destroy_with_parent">True</property>
-    <property name="skip_taskbar_hint">True</property>
-    <property name="skip_pager_hint">True</property>
-    <property name="urgency_hint">True</property>
-    <property name="accept_focus">False</property>
-    <property name="focus_on_map">False</property>
-    <property name="decorated">False</property>
-    <property name="deletable">False</property>
-    <child>
-      <placeholder/>
-    </child>
-    <child>
-      <object class="GtkImage">
-        <property name="visible">True</property>
-        <property name="can_focus">False</property>
-        <property name="pixbuf">logo.png</property>
-      </object>
-    </child>
-  </object>
   <object class="GtkApplicationWindow" id="shi">
+    <property name="name">window</property>
     <property name="can_focus">False</property>
     <property name="default_width">700</property>
     <property name="default_height">500</property>
-    <property name="urgency_hint">True</property>
-    <property name="has_resize_grip">True</property>
     <child>
       <placeholder/>
     </child>
@@ -44,6 +15,7 @@
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="orientation">vertical</property>
+        <property name="spacing">4</property>
         <child>
           <object class="GtkMenuBar">
             <property name="visible">True</property>
@@ -205,19 +177,21 @@
           <object class="GtkPaned">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
-            <property name="margin_bottom">324</property>
+            <property name="position">128</property>
+            <property name="wide_handle">True</property>
             <child>
               <object class="GtkFrame">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="margin_right">171</property>
-                <property name="label_xalign">0</property>
+                <property name="label_xalign">0.5</property>
                 <property name="shadow_type">none</property>
                 <child>
                   <object class="GtkAlignment">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
-                    <property name="left_padding">12</property>
+                    <property name="xalign">0</property>
+                    <property name="yalign">0</property>
                     <child>
                       <object class="GtkScrolledWindow">
                         <property name="visible">True</property>
@@ -288,9 +262,6 @@
             <property name="fill">True</property>
             <property name="position">1</property>
           </packing>
-        </child>
-        <child>
-          <placeholder/>
         </child>
       </object>
     </child>
